update license and index html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Tetris</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" media="screen" href="css/style.min.css">
+    <link rel="stylesheet" media="screen" href="css/style.css">
 </head>
 <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 
